// Copyright 2024 Fraunhofer AISEC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
//           $$\                           $$\ $$\   $$\
//           $$ |                          $$ |\__|  $$ |
//  $$$$$$$\ $$ | $$$$$$\  $$\   $$\  $$$$$$$ |$$\ $$$$$$\    $$$$$$\   $$$$$$\
// $$  _____|$$ |$$  __$$\ $$ |  $$ |$$  __$$ |$$ |\_$$  _|  $$  __$$\ $$  __$$\
// $$ /      $$ |$$ /  $$ |$$ |  $$ |$$ /  $$ |$$ |  $$ |    $$ /  $$ |$$ | \__|
// $$ |      $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$ |  $$ |$$\ $$ |  $$ |$$ |
// \$$$$$$\  $$ |\$$$$$   |\$$$$$   |\$$$$$$  |$$ |  \$$$   |\$$$$$   |$$ |
//  \_______|\__| \______/  \______/  \_______|\__|   \____/  \______/ \__|
//
// This file is part of Clouditor Community Edition.


syntax = "proto3";

package clouditor.ontology.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "clouditor.io/clouditor/api/ontology";

message ResourceID {
	repeated string resource_id = 1;
}

// Analyzes the activity of a NetworkService (which includes DatabaseServices).
// Scope contains the resource ID of the protected resource.
message AnomalyDetection {
	bool enabled  = 1;
	ApplicationLogging ApplicationLogging  = 2;
}

message Networking {

	oneof type {
		NetworkInterface network_interface = 101;
		NetworkSecurityGroup network_security_group = 102;
		NetworkService network_service = 103;
		VirtualNetwork virtual_network = 104;
		VirtualSubNetwork virtual_sub_network = 105;
	}
}

message CustomerKeyEncryption {
	string keyUrl  = 1;
}

message DatabaseQuery {
	bool modify  = 1;
}

// An HTTP endpoint, that is routed through a (reverse) proxy, e.g. a load balancer.
message ProxiedEndpoint {
	string HttpEndpoint  = 1;
}

message Identifiable {
	bool activated  = 1;
	Authenticity Authenticity  = 2;
	Authorization Authorization  = 3;

	oneof type {
		Identity identity = 101;
		RoleAssignment role_assignment = 102;
	}
}

message Compute {
	repeated ResourceID NetworkInterface  = 1;
	EncryptionInUse EncryptionInUse  = 2;
	ResourceLogging ResourceLogging  = 3;

	oneof type {
		Container container = 101;
		Function function = 102;
		VirtualMachine virtual_machine = 103;
		WebApp web_app = 104;
	}
}

message Confidentiality {

	oneof type {
		AtRestEncryption at_rest_encryption = 101;
		CipherSuite cipher_suite = 102;
		EncryptionInUse encryption_in_use = 103;
		TransportEncryption transport_encryption = 104;
	}
}

// describes the actual database or a table in a database
message DatabaseStorage {
	string Storage  = 1;
}

// An file storage service represents the network service that is used to access a list of file storage shares. The storage itself is modelled as a FileStorage. The service has an http endpoint.
message FileStorageService {
	HttpEndpoint HttpEndpoint  = 1;
}

// This encapsulates the whole (source) code of an application.
message Application {
	string programmingLanguage  = 1;
	repeated Functionality Functionality  = 2;
	ResourceID Compute  = 3;
}

message Framework {

	oneof type {
		CloudSDK cloud_s_d_k = 101;
		HttpClientLibrary http_client_library = 102;
		HttpServer http_server = 103;
		Logger logger = 104;
	}
}

message MessagingHub {
}

message CloudResource {
	GeoLocation GeoLocation  = 1;

	oneof type {
		Account account = 101;
		CICDService c_i_c_d_service = 102;
		Compute compute = 103;
		ContainerOrchestration container_orchestration = 104;
		ContainerRegistry container_registry = 105;
		Identifiable identifiable = 106;
		Image image = 107;
		IoT io_t = 108;
		Key key = 109;
		KeyVault key_vault = 110;
		Networking networking = 111;
		PasswordPolicy password_policy = 112;
		ResourceGroup resource_group = 113;
		Storage storage = 114;
	}
}

message DatabaseConnect {
}

message VirtualMachine {
	repeated ResourceID BlockStorage  = 1;
	ActivityLogging ActivityLogging  = 2;
	AutomaticSecurityUpdates AutomaticSecurityUpdates  = 3;
	BootLogging BootLogging  = 4;
	MalwareProtection MalwareProtection  = 5;
	OSLogging OSLogging  = 6;
}

message AccessRestriction {

	oneof type {
		Firewall firewall = 101;
	}
}

message NoAuthentication {
}

message VirtualSubNetwork {
}

message NetworkInterface {
	ResourceID NetworkService  = 1;
}

message ResourceGroup {
}

message SingleSignOn {
	bool enabled  = 1;
}

message AtRestEncryption {
	string algorithm  = 1;
	bool enabled  = 2;
	string keyUrl  = 3;

	oneof type {
		CustomerKeyEncryption customer_key_encryption = 101;
		ManagedKeyEncryption managed_key_encryption = 102;
	}
}

message ContainerOrchestration {
	string managementUrl  = 1;
	ResourceLogging ResourceLogging  = 2;
	repeated ResourceID Container  = 3;
}

// This class represents a database service. For example, a postgres SQL server would be modelled as a database service (with a host and IP) and the individual tables or collections would be modelled as a DatabaseStorage entity.
message DatabaseService {
	HttpEndpoint HttpEndpoint  = 1;
	MalwareProtection MalwareProtection  = 2;

	oneof type {
		DocumentDatabaseService document_database_service = 101;
		KeyValueDatabaseService key_value_database_service = 102;
		RelationalDatabaseService relational_database_service = 103;
	}
}

message FileStorage {
}

message IoT {

	oneof type {
		DeviceProvisioningService device_provisioning_service = 101;
		MessagingHub messaging_hub = 102;
	}
}

message Authenticity {

	oneof type {
		CertificateBasedAuthentication certificate_based_authentication = 101;
		TokenBasedAuthentication token_based_authentication = 102;
		NoAuthentication no_authentication = 103;
		OTPBasedAuthentication o_t_p_based_authentication = 104;
		PasswordBasedAuthentication password_based_authentication = 105;
		SingleSignOn single_sign_on = 106;
	}
}

message CipherSuite {
}

message EncryptionInUse {
	bool enabled  = 1;
}

// A Load Balancer may have multiple access restriction features, e.g. a L3 firewall and a WAF
message LoadBalancer {
	string url  = 1;
	repeated HttpEndpoint HttpEndpoint  = 2;
	repeated ResourceID NetworkService  = 3;
}

message BlockStorage {
}

message Functionality {

	oneof type {
		HttpEndpoint http_endpoint = 101;
		HttpRequestHandler http_request_handler = 102;
		Operation operation = 103;
	}
}

message TokenBasedAuthentication {
	bool enabled  = 1;
	bool enforced  = 2;
}

message Logging {
	bool enabled  = 1;
	ResourceID LoggingService  = 2;

	oneof type {
		ActivityLogging activity_logging = 101;
		ApplicationLogging application_logging = 102;
		BootLogging boot_logging = 103;
		OSLogging o_s_logging = 104;
		ResourceLogging resource_logging = 105;
	}
}

message Redundancy {
}

message HttpClientLibrary {
}

message RBAC {
}

message ManagedKeyEncryption {
}

message Container {
	ResourceID Image  = 1;
}

// This represents the cloud account as a whole, e.g., an Azure subscription.
message Account {
}

message DatabaseOperation {
	ResourceID DatabaseStorage  = 1;
	ResourceID DatabaseService  = 2;

	oneof type {
		DatabaseConnect database_connect = 101;
		DatabaseQuery database_query = 102;
	}
}

message OTPBasedAuthentication {
	bool activated  = 1;
}

message Workflow {
}

message ActivityLogging {
}

message DeviceProvisioningService {
}

// Via the Authenticity relationship, the access type can be specified, e.g. public access (no authentication), password-based, etc.
message HttpEndpoint {
	string method  = 1;
	string path  = 2;
	string url  = 3;
	Authenticity Authenticity  = 4;
	TransportEncryption TransportEncryption  = 5;

	oneof type {
		ProxiedEndpoint proxied_endpoint = 101;
	}
}

message ObjectStorageRequest {
	string type  = 1;
	ResourceID ObjectStorage  = 2;
}

message BootLogging {
}

message Job {
}

message ObjectStorage {
}

message HttpRequestHandler {
	string path  = 1;
	Application Application  = 2;
	repeated HttpEndpoint HttpEndpoint  = 3;
}

// A logging-as-a-service offering, e.g. for analyzing logs; has a Storage resource that stores the logs
message LoggingService {
	repeated ResourceID Storage  = 1;
}

message RoleAssignment {
}

// RetentionPeriod in hours
message Backup {
	bool enabled  = 1;
	ResourceID Storage  = 2;
}

message Resource {
	string Resource  = 1;

	oneof type {
		Application application = 101;
		CloudResource cloud_resource = 102;
		Document document = 103;
	}
}

message ContainerImage {
}

// This feature is, e.g., available on some VM services to automatically update their software. It ensures that a resource is protected from tampering with its state.
message AutomaticSecurityUpdates {
	bool enabled  = 1;
}

message HttpServer {
	HttpRequestHandler HttpRequestHandler  = 1;
}

message Firewall {

	oneof type {
		L3Firewall l3_firewall = 101;
		WebApplicationFirewall web_application_firewall = 102;
	}
}

message PasswordPolicy {
}

message VMImage {
}

message CICDService {

	oneof type {
		Job job = 101;
		Workflow workflow = 102;
	}
}

message CertificateBasedAuthentication {
	bool enabled  = 1;
}

message CloudSDK {
}

message GeoLocation {
	string region  = 1;
}

// A LogOperation is used by an application
message LogOperation {
	Logging Logging  = 1;
}

// analyzes the activity within a Compute resource
message MalwareProtection {
	bool enabled  = 1;
	ApplicationLogging ApplicationLogging  = 2;
}

message Immutability {
	bool enabled  = 1;
}

message Key {
	bool enabled  = 1;
}

message Storage {
	repeated Backup Backup  = 1;
	Immutability Immutability  = 2;
	Redundancy Redundancy  = 3;
	ResourceLogging ResourceLogging  = 4;

	oneof type {
		BlockStorage block_storage = 101;
		DatabaseStorage database_storage = 102;
		FileStorage file_storage = 103;
		ObjectStorage object_storage = 104;
	}
}

// A WAF is a L7 firewall that includes L3 capabilities
message WebApplicationFirewall {
	bool enabled  = 1;
}

message Integrity {

	oneof type {
		AutomaticSecurityUpdates automatic_security_updates = 101;
		Immutability immutability = 102;
	}
}

message KeyVault {
}

message NetworkSecurityGroup {
}

message OSLogging {
}

message WebApp {
}

message ABAC {
}

message ContainerRegistry {
}

message DDoSProtection {
}

// A NetworkService is an application (on the network layer) running on a Compute resource. It provides access to a resource
message NetworkService {
	ResourceID Compute  = 1;
	TransportEncryption TransportEncryption  = 2;

	oneof type {
		LoadBalancer load_balancer = 101;
		LoggingService logging_service = 102;
		StorageService storage_service = 103;
	}
}

message Image {
	Application Application  = 1;

	oneof type {
		ContainerImage container_image = 101;
		VMImage v_m_image = 102;
	}
}

message PasswordBasedAuthentication {
	bool activated  = 1;
}

message Availability {

	oneof type {
		Backup backup = 101;
		DDoSProtection d_do_s_protection = 102;
		GeoLocation geo_location = 103;
		Redundancy redundancy = 104;
	}
}

message Operation {

	oneof type {
		DatabaseOperation database_operation = 101;
		HttpRequest http_request = 102;
		LogOperation log_operation = 103;
		ObjectStorageRequest object_storage_request = 104;
	}
}

// This entity represents a network-based service that can be used to access a particular storage backend. It has multiple subclasses, e.g., for databases or object stores. It has a list of storage resources associated to it.
message StorageService {
	repeated ResourceID Storage  = 1;

	oneof type {
		DatabaseService database_service = 101;
		FileStorageService file_storage_service = 102;
		ObjectStorageService object_storage_service = 103;
	}
}

message ApplicationLogging {
}

message Document {
	repeated SecurityFeature SecurityFeature  = 1;
}

message DocumentDatabaseService {
}

message Logger {
}

message Auditing {

	oneof type {
		AnomalyDetection anomaly_detection = 101;
		Logging logging = 102;
		MalwareProtection malware_protection = 103;
	}
}

message HttpRequest {
	HttpEndpoint HttpEndpoint  = 1;
}

message Identity {
	repeated Authenticity Authenticity  = 1;
}

// enabled means the resource _can_ be reached via https, while enforced means it _can only_ be reached via https (or http traffic is redirected)
message TransportEncryption {
	bool enabled  = 1;
	bool enforced  = 2;
	repeated CipherSuite CipherSuite  = 3;
}

message L3Firewall {
	bool enabled  = 1;
	bool inbound  = 2;
	string restrictedPorts  = 3;
}

message VirtualNetwork {
}

// An object storage service represents the network service that is used to access a list of object storage containers. The storage itself is modelled as a ObjectStorage. The service has an http endpoint.
message ObjectStorageService {
	HttpEndpoint HttpEndpoint  = 1;
}

message RelationalDatabaseService {
}

message Authorization {

	oneof type {
		ABAC a_b_a_c = 101;
		AccessRestriction access_restriction = 102;
		RBAC r_b_a_c = 103;
	}
}

message Function {
}

message KeyValueDatabaseService {
}

message ResourceLogging {
}

message SecurityFeature {

	oneof type {
		Auditing auditing = 101;
		Authenticity authenticity = 102;
		Authorization authorization = 103;
		Availability availability = 104;
		Confidentiality confidentiality = 105;
		Integrity integrity = 106;
	}
}
